<resources>
    <string name="app_name">Tasky</string>

    <string name="sign_in_please">Sign in please</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="add_task">Add Task</string>
    <string name="domain">Domain</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="tasks">Tasks</string>
    <string name="create">Create</string>
    <string name="create_task">Create task</string>
    <string name="more_actions">More Actions</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="would_you_like_to_split_the_main_task_in_multiple_subtasks">Would you like to split the main task in multiple subtasks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_details">Task details</string>
    <string name="next">Next</string>
    <string name="remove_subtask">Remove subtask</string>
    <string name="show_hide">Show Hide</string>
    <string name="subtask">Subtask:</string>
    <string name="would_you_like_to_self_impose_a_deadline_on_this_task">Would you like to self impose a deadline on this task?</string>
    <string name="task_progress_text">%1$d completed subtasks of %2$d</string>
    <string name="subtask_placeholder">Subtask: %1$d</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="progress_percentage">%1$d%%</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="a_time_management_app_for_productivity">A time management app for productivity</string>
    <string name="welcome">Welcome</string>
    <string name="edit_deatils">Edit deatils</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="start">start</string>
    <string name="deadline">Deadline</string>
    <string name="imposed_deadline">Imposed deadline</string>
    <string name="priority_info">Priority:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="progress">Progress</string>
    <string name="time_spent">Time spent</string>
    <string name="subtask_number">Subtask number:</string>
    <string name="new_task">New</string>
    <string name="in_progress">In Progress</string>
    <string name="complete">Complete</string>
    <string name="difficult">Difficulty</string>
    <string name="username">Username</string>
    <string name="overdue">Overdue</string>
    <string name="filter_tasks">Filter tasks</string>
    <string name="new_user">New user</string>
</resources>