<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/text_view_subtak_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/subtask"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_button_show_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@color/transparent"
        android:contentDescription="@string/show_hide"
        android:src="@drawable/ic_baseline_arrow_drop_up_24"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="50dp"
        android:background="@color/generalBlueColor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_subtask_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_input_title, text_input_description,
        image_button_remove_subtask, text_input_difficulty" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/title"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/description"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_input_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_difficulty"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/difficult"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_input_description">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:labelFor="@id/text_input_difficulty" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/image_button_remove_subtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:contentDescription="@string/remove_subtask"
        android:paddingBottom="15dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_difficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>